<resources>
    <string name="app_name">PaperOutApplication</string>

    <string name="signin_id">USERNAME</string>
    <string name="signin_pw">PASSWORD</string>
    <string name="signin_btn_login">로그인</string>
    <string name="signin_btn_register">가입하기</string>
    '
    <string name="guide_signup"><b>회원가입</b>하기</string>
    <string name="signup_guide_password"><b>비밀번호</b>설정</string>
    <string name="signup_university">대학교</string>
    <string name="signup_name">이름</string>
    <string name="signup_number">학번</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_password_confirm">비밀번호 확인</string>
    <string name="signup_guide_code">인증번호 입력</string>
    <string name="signup_btn_request_code">인증번호 발송</string>
    <string name="signup_btn_request_code_again">인증번호 재발송</string>
    <string name="signup_btn_submit">가입완료</string>
    <string name="signup_set_password_submit">비밀번호 설정 완료</string>
    <string name="signup_set_pin">PIN 번호 설정</string>
    <string name="signup_request_password_confirm">비밀번호를 다시 입력해 주세요</string>
    <string name="signup_error_password">비밀번호가 일치하지 않습니다.\n 다시 입력해 주세요</string>

    <string name="guide_select_paper">발급받을 <b>증명서</b>를 <b>선택</b>해주세요</string>
    <string name="paper_select_submit">발급받기</string>

    <string name="guide_detection_fingerprint"><b>지문</b>을 <b>입력</b>해주세요</string>
    <string name="enter_password_direct">암호 직접 입력하기</string>
    <string name="dialog_please_enter_pin">Pin 번호를 입력해 주세요</string>
    <string name="dialog_please_enter_email">증명서를 전송할 이메일을 입력해 주세요</string>

    <string name="guide_finish_send_paper">증명서 전송을 완료했습니다!</string>
    <string name="guide_finish_send_paper_detail">선택하신 증명서를 전송하였습니다!</string>

    <string name="success_send_paper">증명서 전송을 완료했습니다.</string>
    <string name="fail_send_paper">증명서 전송을 실패했습니다.</string>

    <string name="guide_paper_box">증명서 보관함</string>
    <string name="guide_finish_download_paper"><b>다운로드</b>가 <b>완료</b>되었습니다! </string>
    <string name="guide_finish_print_paper"><b>발급</b>이 <b>완료</b>되었습니다!</string>
    <string name="guide_finish_print_paper_detail"><b>발급받은 증명서</b>는\n<b>보관함</b>에서 확인할 수 있습니다.</string>
    <string name="btn_check_paper">증명서 확인</string>
    <string name="btn_finish">보관함 돌아가기</string>

    <string name="msg_need_choose_paper">증명서를 선택해 주세요!</string>
    <string name="msg_login_fail">로그인에 실패했습니다</string>
    <string name="msg_register_fail">회원가입에 실패했습니다</string>

    <string name="request_paper_guide"><b>증명셔 요청</b>이 들어왔습니다</string>
    <string name="request_paper_kind"><b>요청서류</b> : </string>
    <string name="request_paper_company"><b>요청 기업</b> : </string>
    <string name="request_paper_duration"><b>제출 기한</b> : </string>

    <string name="error_retry_fingerprint">지문을 다시 입력해 주세요!</string>
    <string name="error_unable_fingerprint">지문인식을 사용할 수 없습니다!</string>
    <string name="err_unknown_item">알 수 없는 오류가 발생했습니다.</string>
    <string name="error_worng_email">정확한 이메일을 입력해 주세요!</string>

    <string name="requeust_paper_later">보류</string>
    <string name="requeust_paper_send">전송</string>

    <string name="action_print">인증서 발급</string>

    <string name="search_paper">증명서 검색</string>
    <string name="paper_btn_send">SEND</string>
    <string name="paper_btn_download">DOWNLOAD</string>

    <string name="warning_need_permission">권한을 허용하지 않아 서비스를 사용할 수 없습니다!</string>

    <string name="fail_request_paper">증명서 발급에 실패했습니다</string>


    <string name="server_host">http://hellochain.gachon.ac.kr</string>
    <string name="url_get_paper_list"></string>
    <string name="url_get_printed_paper_list"></string>
    <string name="url_login">/user/login/</string>
    <string name="url_register">/user/register/</string>
    <string name="url_paper_download"></string>
    <string name="url_paper_send"></string>
    <string name="url_paper_request">/data/</string>
</resources>
