<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scale_base_width="100"
        app:scale_base_height="150">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            app:scale_width="70"
            app:scale_height="50"
            app:scale_left="15"
            app:scale_top="20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_id"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:scale_height="14"
            app:scale_width="86"
            app:scale_left="8"
            app:scale_top="75"
            app:scale_textsize="4.5"/>

        <EditText
            android:id="@+id/et_username"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:scale_height="12"
            app:scale_width="86"
            app:scale_left="7"
            app:scale_top="79"
            app:scale_textsize="4.5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_pw"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:scale_height="14"
            app:scale_width="86"
            app:scale_left="8"
            app:scale_top="102"
            app:scale_textsize="4.5"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:scale_height="12"
            app:scale_width="86"
            app:scale_left="7"
            app:scale_top="105"
            app:scale_textsize="4.5"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_btn_login"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="bold"
            android:background="@drawable/border_round_button"
            app:scale_height="12"
            app:scale_width="40"
            app:scale_left="7"
            app:scale_top="129"
            app:scale_textsize="5" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_btn_register"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/border_round_gray_button"
            app:scale_height="12"
            app:scale_width="40"
            app:scale_left="53"
            app:scale_top="129"
            app:scale_textsize="5" />

    </com.ssomai.android.scalablelayout.ScalableLayout>

</LinearLayout>
