<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scale_base_width="100"
        app:scale_base_height="160">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:text="@string/guide_signup"
            app:scale_width="100"
            app:scale_height="15"
            app:scale_left="0"
            app:scale_top="20"
            app:scale_textsize="5"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:src="@drawable/ic_lock"
            android:textAlignment="center"
            android:text="@string/guide_signup"
            app:scale_width="40"
            app:scale_height="40"
            app:scale_left="30"
            app:scale_top="40"/>


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_password"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:scale_height="14"
            app:scale_width="25"
            app:scale_left="8"
            app:scale_top="101"
            app:scale_textsize="4.5"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            app:scale_height="14"
            app:scale_width="60"
            app:scale_left="28"
            app:scale_top="97"
            app:scale_textsize="4.5"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            app:scale_height="0.5"
            app:scale_width="84"
            app:scale_left="8"
            app:scale_top="108" />

        <TextView
            android:id="@+id/tv_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_password_confirm"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:scale_height="14"
            app:scale_width="25"
            app:scale_left="8"
            app:scale_top="120"
            app:scale_textsize="4.5"/>

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@android:color/transparent"
            app:scale_height="14"
            app:scale_width="60"
            app:scale_left="36"
            app:scale_top="116"
            app:scale_textsize="4.5"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            app:scale_height="0.5"
            app:scale_width="84"
            app:scale_left="8"
            app:scale_top="127" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_set_password_submit"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/border_round_blue_button"
            app:scale_height="14"
            app:scale_width="84"
            app:scale_left="7"
            app:scale_top="139"
            app:scale_textsize="4.5" />

    </com.ssomai.android.scalablelayout.ScalableLayout>

</LinearLayout>
